user will have to implement intelligent target for build wheel

--- a/python/miniconda/Makefile
+++ b/python/miniconda/Makefile
@@ -5,7 +5,7 @@ HASHFILE=sha256sum.txt
 PYENV=miniconda3
 PYTHON=$(PYENV)/bin/python3
 
-.PHONY: checksum clean
+.PHONY: build checksum clean
 
 build: $(PYENV)/bin/activate
 	$(PYTHON) -m build
